--- a/package.json
+++ b/package.json
@@ -11,18 +11,10 @@
   "license": "ISC",
   "devDependencies": {
     "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "firebase": "^9.8.3"
+    "firebase": "^9.8.2"
   },
-  "description": "This project is the repository that will be used for the team projects.",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/UTEPCSAgile/team-project-team4.git"
-  },
-  "bugs": {
-    "url": "https://github.com/UTEPCSAgile/team-project-team4/issues"
-  },
-  "homepage": "https://github.com/UTEPCSAgile/team-project-team4#readme"
+  "description": ""
 }
